--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,13 +21,13 @@ on:
         required: false
         default: "./test/UlidType.Tests/UlidType.Tests.csproj"
 
-      build-configuration:
+      configuration:
         description: "The type of build to produce, e.g. Release vs Debug"
         type: string
         required: false
         default: "Release"
 
-      defined_symbols:
+      defined-symbols:
         description: "Define constants to pass to the compiler"
         type: string
         required: false
@@ -52,6 +52,8 @@ env:
   # this must be the same across all jobs and steps below.
   # We must know where to find the artifacts and where to download/upload to/from across all jobs and steps here.
   ARTIFACTS_DIR: "TestArtifacts"
+  DOTNET_NOLOGO: true
+  DOTNET_CLI_TELEMETRY_OPTOUT: true
 
 jobs:
   test:
@@ -83,8 +85,10 @@ jobs:
         run: >-
           ./scripts/bash/run-tests.sh ${{ inputs.test-project }}
           --min-coverage-pct "${{ inputs.min-coverage-pct }}"
-          --build-configuration "${{ inputs.build-configuration }}"
-          --defined_symbols "${{ inputs.defined_symbols }}"
+          --configuration "${{ inputs.configuration }}"
+          --defined-symbols "${{ inputs.defined-symbols }}"
+          --artifacts-dir "${{ env.ARTIFACTS_DIR }}"
+          ${{ inputs.verbose && '--verbose' || '' }}
 
       - name: Upload coverage artifact
         uses: actions/upload-artifact@v4
