--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -101,17 +101,17 @@ jobs:
       - id: setup-vars
         shell: bash
         env:
-          MATRIX_OS: ${{ fromJson(inputs.os) || fromJson(vars.MATRIX_OS) || '["ubuntu-latest"]' }}
+          MATRIX_OS: ${{ fromJSON(inputs.os) || fromJSON(vars.MATRIX_OS) || '["ubuntu-latest"]' }}
           DOTNET_VERSION: ${{ inputs.dotnet-version || vars.DOTNET_VERSION || '9.0.x' }}
           CONFIGURATION: ${{ inputs.configuration || vars.CONFIGURATION || 'Release' }}
           DEFINED_SYMBOLS: ${{ inputs.defined-symbols || vars.DEFINED_SYMBOLS || '' }}
           TEST_PROJECT: ${{ inputs.test-project || vars.TEST_PROJECT || './test/UlidType.Tests/UlidType.Tests.csproj' }}
-          MIN_COVERAGE_PCT: ${{ fromJson(inputs.min-coverage-pct) || fromJson(vars.MIN_COVERAGE_PCT) || 75 }}
-          RUN_BENCHMARKS: ${{ fromJSON(inputs.run-benchmarks) || fromJson(vars.RUN_BENCHMARKS) || true }}
+          MIN_COVERAGE_PCT: ${{ fromJSON(inputs.min-coverage-pct) || fromJSON(vars.MIN_COVERAGE_PCT) || 75 }}
+          RUN_BENCHMARKS: ${{ fromJSON(inputs.run-benchmarks) || fromJSON(vars.RUN_BENCHMARKS) || true }}
           BENCHMARK_PROJECT: ${{ inputs.benchmark-project || vars.BENCHMARK_PROJECT || './benchmarks/UlidType.Benchmarks/UlidType.Benchmarks.csproj' }}
-          FORCE_NEW_BASELINE: ${{ fromJSON(inputs.force-new-baseline) || fromJson(vars.FORCE_NEW_BASELINE) || false }}
-          MAX_REGRESSION_PCT: ${{ fromJSON(inputs.max-regression-pct) || fromJson(vars.MAX_REGRESSION_PCT) || 10 }}
-          VERBOSE: ${{ fromJSON(vars.VERBOSE) || false }}
+          FORCE_NEW_BASELINE: ${{ fromJSON(inputs.force-new-baseline) || fromJSON(vars.FORCE_NEW_BASELINE) || false }}
+          MAX_REGRESSION_PCT: ${{ fromJSON(inputs.max-regression-pct) || fromJSON(vars.MAX_REGRESSION_PCT) || 10 }}
+          verbose: ${{ fromJSON(vars.VERBOSE) || false }}
         run: ./scripts/bash/setup-ci-vars.sh
 
   build_job:
