--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -101,17 +101,17 @@ jobs:
       - id: setup-vars
         shell: bash
         env:
-          MATRIX_OS: ${{ fromJSON(inputs.os || vars.MATRIX_OS || '["ubuntu-latest"]') }}
+          MATRIX_OS: ${{ inputs.os || vars.MATRIX_OS || '["ubuntu-latest"]' }}
           DOTNET_VERSION: ${{ inputs.dotnet-version || vars.DOTNET_VERSION || '9.0.x' }}
           CONFIGURATION: ${{ inputs.configuration || vars.CONFIGURATION || 'Release' }}
           DEFINED_SYMBOLS: ${{ inputs.defined-symbols || vars.DEFINED_SYMBOLS || '' }}
           TEST_PROJECT: ${{ inputs.test-project || vars.TEST_PROJECT || './test/UlidType.Tests/UlidType.Tests.csproj' }}
-          MIN_COVERAGE_PCT: ${{ fromJSON(inputs.min-coverage-pct || vars.MIN_COVERAGE_PCT || '75') }}
-          RUN_BENCHMARKS: ${{ fromJSON(inputs.run-benchmarks || vars.RUN_BENCHMARKS || 'true') }}
+          MIN_COVERAGE_PCT: ${{ inputs.min-coverage-pct || vars.MIN_COVERAGE_PCT || '75' }}
+          RUN_BENCHMARKS: ${{ inputs.run-benchmarks || vars.RUN_BENCHMARKS || 'true' }}
           BENCHMARK_PROJECT: ${{ inputs.benchmark-project || vars.BENCHMARK_PROJECT || './benchmarks/UlidType.Benchmarks/UlidType.Benchmarks.csproj' }}
-          FORCE_NEW_BASELINE: ${{ fromJSON(inputs.force-new-baseline || vars.FORCE_NEW_BASELINE || 'false') }}
-          MAX_REGRESSION_PCT: ${{ fromJSON(inputs.max-regression-pct || vars.MAX_REGRESSION_PCT || '10') }}
-          verbose: ${{ fromJSON(vars.VERBOSE || 'false') }}
+          FORCE_NEW_BASELINE: ${{ inputs.force-new-baseline || vars.FORCE_NEW_BASELINE || 'false' }}
+          MAX_REGRESSION_PCT: ${{ inputs.max-regression-pct || vars.MAX_REGRESSION_PCT || '10' }}
+          verbose: ${{ vars.VERBOSE || 'false' }}
         run: ./scripts/bash/setup-ci-vars.sh
 
   build_job:
