--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -102,7 +102,7 @@ jobs:
         shell: bash
         run: >-
           ./scripts/bash/setup-ci-vars.sh
-          --matrix-os: ${{ inputs.os || vars.MATRIX_OS || '["ubuntu-latest"]' }}
+          --matrix-os: ${{ toJSON(inputs.os || vars.MATRIX_OS || '["ubuntu-latest"]') }}
           --dotnet-version: ${{ inputs.dotnet-version || vars.DOTNET_VERSION || '9.0.x' }}
           --configuration: ${{ inputs.configuration || vars.CONFIGURATION || 'Release' }}
           --defined-symbols: ${{ inputs.defined-symbols || vars.DEFINED_SYMBOLS || '' }}
