Update benchmarks and test workflows to improve artifact naming and parameter consistency

--- a/.github/workflows/benchmarks.yaml
+++ b/.github/workflows/benchmarks.yaml
@@ -89,7 +89,7 @@ jobs:
         run: >-
           ./scripts/bash/download-artifact.sh
             --repo ${{ github.repository }}
-            --wf-path $GITHUB_PATH
+            --wf-name 'Reusable - Benchmarks'
             --artifact benchmark-summaries-${{ matrix.os }}
             --directory ${{ env.ARTIFACTS_DIR }}/baseline
             ${{ inputs.verbose && '--verbose' || '' }}
