--- a/.github/workflows/benchmarks.yaml
+++ b/.github/workflows/benchmarks.yaml
@@ -88,7 +88,7 @@ jobs:
         shell: bash
         run: >-
           ./scripts/bash/download-artifact.sh
-          --repo ${{ github.repository }}
+          --repository ${{ github.repository }}
           --wf-name 'Reusable - Benchmarks'
           --artifact benchmark-summaries-${{ matrix.os }}
           --directory ${{ env.ARTIFACTS_DIR }}/baseline
