--- a/.github/workflows/benchmarks.yaml
+++ b/.github/workflows/benchmarks.yaml
@@ -86,6 +86,8 @@ jobs:
       - name: Download baseline benchmark summaries artifact
         if: ${{ !inputs.force-new-baseline }}
         shell: bash
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: >-
           ./scripts/bash/download-artifact.sh
           --repository ${{ github.repository }}
