Refactor workflow names for consistency and clarity; remove unused download-artifact workflow

--- a/.github/workflows/benchmarks.yaml
+++ b/.github/workflows/benchmarks.yaml
@@ -1,4 +1,4 @@
-name: Reusable - Benchmarks
+name: Benchmarks (Reusable)
 
 on:
   workflow_call:
@@ -88,28 +88,27 @@ jobs:
         shell: bash
         env:
           GH_TOKEN: ${{ github.token }}
+          VERBOSE: ${{ fromJSON(inputs.verbose) || fromJson(vars.VERBOSE) || false }}
         run: >-
           ./scripts/bash/download-artifact.sh
           --repository ${{ github.repository }}
-          --wf-name 'CI - Build, Test, Coverage & Benchmarks'
+          --wf-path '.github/workflows/CI.yaml'
           --artifact benchmark-summaries-${{ matrix.os }}
           --directory ${{ env.ARTIFACTS_DIR }}/baseline
-          ${{ inputs.verbose && '--verbose' || '' }}
 
       - name: Run the benchmarks
+        if: ${{ success() || fromJSON(inputs.force-new-baseline) || fromJson(vars.FORCE_NEW_BASELINE) }}
         shell: bash
         env:
-          FORCE_NEW_BASELINE: ${{ fromJSON(inputs.force-new-baseline) || false }}
-          VERBOSE: ${{ fromJSON(inputs.verbose) || false }}
-          DEFINED_SYMBOLS: ${{ inputs.defined-symbols || '' }}
+          CONFIGURATION: ${{ inputs.configuration || 'vars.CONFIGURATION' || 'Release' }}
+          DEFINED_SYMBOLS: ${{ inputs.defined-symbols || 'vars.DEFINED_SYMBOLS' }}
+          VERBOSE: ${{ fromJSON(inputs.verbose) || fromJson(vars.VERBOSE) || false }}
+          FORCE_NEW_BASELINE: ${{ fromJSON(inputs.force-new-baseline) || fromJson(vars.FORCE_NEW_BASELINE) || false }}
         run: >-
           ./scripts/bash/run-benchmarks.sh ${{ inputs.benchmark-project }}
-          --define "${{ inputs.defined-symbols }}"
           --configuration "${{ inputs.configuration }}"
           --artifacts "${{ env.ARTIFACTS_DIR }}"
           --max-regression-pct "${{ inputs.max-regression-pct }}"
-          ${{ inputs.force-new-baseline && '--force-new-baseline' || '' }}
-          ${{ inputs.verbose && '--verbose' || '' }}
 
       - name: Upload benchmark summaries artifact
         uses: actions/upload-artifact@v4
