--- a/.github/workflows/benchmarks.yaml
+++ b/.github/workflows/benchmarks.yaml
@@ -124,7 +124,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: benchmark-baseline-${{ matrix.os }}
-          path: ${{ env.ARTIFACTS_DIR }}/baseline
+          path: ${{ env.ARTIFACTS_DIR }}/summaries
           if-no-files-found: error
           overwrite: true
           retention-days: 5
