Enhance build and validation scripts with detailed logging to GITHUB_STEP_SUMMARY

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -61,6 +61,12 @@ jobs:
           dotnet build
           /p:DefineConstants="${{ inputs.defined-symbols }}"
           --configuration ${{ inputs.configuration }}
+          {
+          echo "Successful build!"
+          echo "Build configuration: ${{ inputs.configuration }}"
+          echo "Defined symbols: ${{ inputs.defined-symbols || 'None' }}"
+          echo "Runner: ${{ matrix.os }}"
+          } >> $GITHUB_STEP_SUMMARY
 
       - name: ShellCheck
         uses: ludeeus/action-shellcheck@master
